--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,6 @@
 name = "recursive-streamer"
 compatibility_date = "2025-06-27"
 main = "stream.js"
+assets.directory = "./"
 route.custom_domain = true
 route.pattern = "recursive-stream.chatcompletions.com"
